--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
+<!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>CSY1018</title>
-  </head>
-  <body>
-<h1>  Hi! My name is (what?)
-  My name is (who?)
-  My name is
-  Slim Shady
-  Hi! My name is (huh?)
-  My name is (what?)
-  My name is
-  Slim Shady  </h1>
-  </body>
+</head>
+
+<body bgcolor="#7FE9E3" link="#074BEA">
+    <h1>This is my the start of my
+    CSY1018 project </h1>
+    <h2>A HTML page w/ CSS Linked</h2>
+    <h3>This is an H3</h3>
+    <p>
+        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Vivamus urna neque, elementum et, auctor vel, vestibulum in, dui. Praesent laoreet. Aliquam semper ullamcorper augue. Integer vitae lorem. Suspendisse commodo. Donec vulputate. Nunc vel pede vel
+        turpis consectetuer fermentum. Praesent a nisl eu diam luctus consectetuer. Phasellus at diam. Vestibulum turpis odio, bibendum interdum, adipiscing eu, facilisis id, erat. Nulla id magna id sapien molestie posuere. Nam faucibus. Donec commodo
+        bibendum mi. Aliquam erat volutpat. ghghPraesent felis mi, elementum ut, condimentum nec, nonummy at, enim.
+    </p>
+    <p>
+        Integer sem velit, ornare eu, blandit ac, elementum sit amet, metus. Pellentesque in est elementum est cursus consectetuer. Pellentesque mattis purus id erat. Cras volutpat bibendum neque. Nunc a dui. Mauris a neque cursus lorem ultrices sagittis. Morbi
+        ligula. Aenean venenatis justo id arcu. Cras pretium ipsum ut velit. Integer pulvinar. Curabitur magna arcu, molestie at, rutrum at, gravida vulputate, nisl. Sed ipsum orci, accumsan sed, aliquet vel, tempor quis, arcu. Donec aliquam. In nulla
+        nunc, tempor eu, laoreet id, tincidunt sit amet, arcu.
+    </p>
+    <h4>This is an unordered list:</h4>
+    <ul>
+
+
+        <li>
+            Eggs
+        </li>
+        <li>
+            OJ
+        </li>
+        <li>
+            Milk
+        </li>
+        <li>
+            Cereal
+        </li>
+    </ul>
+    <h4>This is an ordered list:</h4>
+    <ol>
+        <li>
+            Eggs
+        </li>
+        <li>
+            OJ
+        </li>
+        <li>
+            Milk
+        </li>
+        <li>
+            Cereal
+        </li>
+        <li>
+            Bread
+        </li>
+    </ol>
+    <p>
+        This is a link to <a href="http://www.google.com">google's website</a>
+    </p>
+
+</body>
+
 </html>
